<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:elevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/label_new_task"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_task_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/label_description"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/txt_task_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/date_and_time_example"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/txt_task_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_more"
                android:layout_width="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_more_vert_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.AppCompat.Button.Borderless"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>